--- a/css/style.css
+++ b/css/style.css
@@ -17,28 +17,34 @@ body{
 }
 
 #img-div {
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 40px;
-  margin-inline-end: 40px;
-  /* padding: 10px; */
+  padding: 10px;
+  margin: 0;
 }
 
 #image {
   display: block;
   height: auto;
-  margin: 0;
-  max-width: 100%;
-
+  margin: 0 auto;
+  max-width: 100%; 
 }
 
 #img-caption {
   font-family: sans-serif;
   font-size: 16px;
+  margin: 15px 0 5px 0;
 }
 
 #tribute-info{
   font-family: sans-serif;
   padding: 2rem;
+}
+
+#footer {
+  width: 100%;
+  text-align: center;
+}
+#tribute-link {
+  font-size: larger;
+  color: #ffffff;
+  text-decoration: none;
 }
